alb_ingress_connect.yaml
apiVersion: extensions/v1beta1 
kind: Ingress 
metadata: 
  annotations: 
    #alb.ingress.kubernetes.io/certificate-arn: <CERTIFICATE_ARN> 
    alb.ingress.kubernetes.io/healthcheck-path: /healthz 
    alb.ingress.kubernetes.io/scheme: internet-facing 
    # alb.ingress.kubernetes.io/target-type: ip 
    alb.ingress.kubernetes.io/subnets: subnet-00d0fd8822e876f47, subnet-040847817af227858
    kubernetes.io/ingress.class: alb  
  name: alb-ingress-connect-nginx 
  namespace: kube-system 
spec: 
  rules: 
    - http: 
        paths: 
          - backend: 
              serviceName: nginx-ingress-ingress-nginx-controller 
              servicePort: 80
            path: /*
